syntax = "proto3";
package messenger;

import "google/protobuf/timestamp.proto";

service Messenger{
  rpc Chat(stream SendMessage) returns (stream Message);
  rpc getMessages(GetMessages) returns (Messages);
}

message SendMessage {
  string text = 1;
  int32 chat_id = 2;
}

message Message {
  int32 id = 1;
  string user_id = 2;
  int32 chat_id = 3;
  string text = 4;
  google.protobuf.Timestamp created_at = 5;
}

message GetMessages{
  int32 chat_id = 1;
  google.protobuf.Timestamp created_before = 2;
}

message Messages{
  repeated Message messages = 1;
}
